updated hoek in package-lock.json

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,6 +1,6 @@
 .jumbotron {
     text-align: center;
-    background: white url("./images/nyt_logo.png") no-repeat left;
+    background: white url("../images/nyt_logo.png") no-repeat left;
     
 }
 
